--- a/app/blog/templates/blog/post_list.html
+++ b/app/blog/templates/blog/post_list.html
@@ -1,14 +1,14 @@
 {% load static %}
 <html>
     <head>
-        <title>AFF blog</title>
+        <title>A personal blog - AFF</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
     </head>
     <body>
         <div class="page-header">
-            <h1><a href="/">AFF Blog</a></h1>
+            <h1><a href="/">A personal blog - AFF Blog</a></h1>
         </div>
 
 
